<resources>
    <string name="app_name" translatable="false">Refugees</string>

    <string name="btMap">Carte</string>
    <string name="btInfos">Informations</string>
    <string name="btTranslation">Traductions</string>
    <string name="franceFlagAction">French flag</string>
    <string name="iranFlagAction">Iranian flag</string>
    <string name="saudiFlagAction">Saudi flag</string>
    <string name="ukFlagAction" translatable="false">Uk flag</string>

    <string name="tvSetBlindMode">Êtes-vous malvoyant ?</string>
    <string name="tvSetNormalMode">Moi ? Je vois bien mamène !</string>
    <string name="title_activity_maps2" translatable="false">Map</string>

    <string name="baseHelp">Aidez-moi</string>
    <string name="baseTransportation">Où m\'emmenez-vous ?</string>
    <string name="baseHurt">J\'ai mal</string>
    <string name="baseFamilly">Où est ma famille ?</string>
    <string name="baseHallal">C\'est hallal ?</string>

    <string name="blindModeActivated">Mode malvoyant activé. Restez appuyé n\'importe où pour avoir un guidage vocal.</string>
    <string name="languageFrench">Langue française</string>
    <string name="languageEnglish">Langue anglaise</string>
    <string name="languageArabic">Langue arabe</string>
    <string name="languagePersan">Langue perse</string>
    <string name="marker_wifi">Wifi</string>
    <string name="marker_cloths">Vêtements</string>
    <string name="marker_sleep">Hebergement</string>
    <string name="marker_care">Soin</string>
    <string name="marker_food">Repas</string>

    <string name="goToMap" translatable="false">Google Map</string>
    <string name="noDate">Pas de date</string>

    <string name="textTrad">Ecrivez ici pour traduire</string>
    <string name="title_activity_info_details" translatable="false">InfoDetailsActivity</string>
</resources>
